src/objects/Pagos_hipoteca__c.object
<CustomObject>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hipoteca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hipoteca</label>
        <referenceTo>Hipoteca__c</referenceTo>
        <relationshipLabel>Pagos hipoteca</relationshipLabel>
        <relationshipName>Pagos_hipoteca</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moneda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Moneda</label>
        <referenceTo>Moneda__c</referenceTo>
        <relationshipLabel>Pagos hipoteca</relationshipLabel>
        <relationshipName>Pagos_hipoteca</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pago hipoteca</label>
    <nameField>
        <label>Nombre de Pagos hipoteca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pagos hipoteca</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>